<resources>
    <string name="app_name">Inventory</string>

    <!-- Settings Menu -->
    <string name="insert_product">Insert Product</string>
    <string name="delete_products">Delete All Products</string>

    <!-- Title text for the empty view, which describes the empty inventory image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There are no products in inventory…</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>


    <!-- Text for sale button on product list [CHAR LIMIT=20] -->
    <string name="sale_button_text">Sale</string>

    <!-- Text for sale button on product list [CHAR LIMIT=20] -->
    <string name="product_not_available">Product is not available</string>


    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>


    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="editor_product_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="editor_product_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="editor_product_quantity">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="editor_product_supplier_name">Supplier Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="editor_product_supplier_phone">Suppler Phone</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="editor_product_supplier_name_wrapped">Supplier\nName</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="editor_product_supplier_phone_wrapped">Suppler\nPhone</string>

    <!-- Text for sale button on product list [CHAR LIMIT=20] -->
    <string name="order_button_text">Order</string>

    <!-- increment/decrement quantity button text -->
    <string name="increase">+</string>
    <string name="decrease">-</string>

    <!-- initial quantity value -->
    <string name="initial_quantity">0</string>


    <!-- Toast message in editor when new product has been successfully insert/updated [CHAR LIMIT=NONE] -->
    <string name="editor_product_save_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be insert/updated [CHAR LIMIT=NONE] -->
    <string name="editor_product_save_failed">Error when saving product</string>

    <!-- Text for order button handler, used when dialer intent is not available [CHAR LIMIT=NONE] -->
    <string name="phone_app_not_available">Phone application not available</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>


    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>


    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error when deleting product</string>


    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Values for street rod product insert -->
    <string name="street_rod_name">Street Rod</string>
    <string name="street_rod_price">8699.99</string>
    <string name="street_rod_quantity">2</string>
    <string name="street_rod_supplier_name">Harley Davidson</string>
    <string name="street_rod_supplier_phone">(414) 343–4056</string>
</resources>
