<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/category_left_right_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/editor_product_name" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="@string/editor_product_name"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/editor_product_price" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="@string/editor_product_price"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/editor_product_quantity" />

        <!-- Quantity field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_age"
                style="@style/QuantityButtonStyle"
                android:text="@string/decrease" />

            <TextView
                android:id="@+id/quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/initial_quantity"
                tools:text="@string/initial_quantity" />

            <Button
                android:id="@+id/increment_age"
                style="@style/QuantityButtonStyle"
                android:text="@string/increase" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/editor_product_supplier_name_wrapped" />

        <!-- Supplier Name field -->
        <EditText
            android:id="@+id/edit_product_supplier_name"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="@string/editor_product_supplier_name"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/editor_product_supplier_phone_wrapped" />

        <!-- Supplier Phone field -->
        <EditText
            android:id="@+id/edit_product_supplier_phone"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:digits="0123456789+"
            android:hint="@string/editor_product_supplier_phone"
            android:inputType="phone" />
    </LinearLayout>

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/order_button_text" />

</LinearLayout>
