<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of products -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxHeight="@dimen/list_item_height"
    android:paddingLeft="@dimen/category_left_right_margin"
    android:paddingRight="@dimen/category_left_right_margin">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="@dimen/category_top_bottom_margin"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        tools:text="@string/street_rod_name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name"
        android:fontFamily="sans-serif"
        android:paddingBottom="@dimen/category_top_bottom_margin"
        android:paddingTop="@dimen/category_top_bottom_margin"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD"
        tools:text="@string/street_rod_price" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:paddingBottom="@dimen/category_top_bottom_margin"
        android:paddingRight="@dimen/category_left_right_margin"
        android:paddingTop="@dimen/category_top_bottom_margin"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD"
        tools:text="@string/street_rod_quantity" />

    <Button
        android:id="@+id/sale"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/name"
        android:focusable="false"
        android:fontFamily="sans-serif"
        android:paddingBottom="@dimen/category_top_bottom_margin"
        android:paddingTop="@dimen/category_top_bottom_margin"
        android:text="@string/sale_button_text"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#2B3D4D" />

</RelativeLayout>